@@ -4,6 +4,8 @@ jsoup changelog
  * Improved startup time, particularly on Android, by reducing garbage generation and CPU execution time when loading
    the HTML entity files. About 1.72x faster in this area.
 
+ * Added Element.is(query) to check if an element matches this CSS query.
+
  * Bugfix: a "SYSTEM" flag in doctype tags would be incorrectly removed.
    <https://github.com/jhy/jsoup/issues/408>
 
